manifests/canary/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary
