manifests/canary/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: nginx
        subset: stable
      weight: 90
    - destination:
        host: nginx
        subset: canary
      weight: 10
